# fastapidemo

./: .env  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
tests/: test_main.py
